--- a/event-loop.html
+++ b/event-loop.html
@@ -18,7 +18,9 @@
 <!-- <script src="./loop-07.js"></script> -->
 <!-- <script src="./loop-08.js"></script> -->
 <!-- <script src="./loop-09.js"></script> -->
-<script src="./loop-10.js"></script>
+<!-- <script src="./loop-10.js"></script> -->
+<!-- <script src="./loop-11.js"></script> -->
+<script src="./loop-12.js"></script>
 </body>
 
 </html>
