--- a/event-loop.html
+++ b/event-loop.html
@@ -20,7 +20,8 @@
 <!-- <script src="./loop-09.js"></script> -->
 <!-- <script src="./loop-10.js"></script> -->
 <!-- <script src="./loop-11.js"></script> -->
-<script src="./loop-12.js"></script>
+<!-- <script src="./loop-12.js"></script> -->
+<script src="./loop-13.js"></script>
 </body>
 
 </html>
